--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,28 @@
 			<version>RELEASE</version>
 		</dependency>
 
+		 <!--https://mvnrepository.com/artifact/org.apache.xmlrpc/xmlrpc-->
+		<dependency>
+			<groupId>org.apache.xmlrpc</groupId>
+			<artifactId>xmlrpc</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.xmlrpc/xmlrpc-client -->
+		<dependency>
+			<groupId>org.apache.xmlrpc</groupId>
+			<artifactId>xmlrpc-client</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.camel/camel-xmlrpc-starter -->
+		<!--<dependency>-->
+			<!--<groupId>org.apache.camel</groupId>-->
+			<!--<artifactId>camel-xmlrpc-starter</artifactId>-->
+			<!--<version>2.19.4</version>-->
+		<!--</dependency>-->
+
+
 	</dependencies>
 
 	<build>
