--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,11 @@
 		</dependency>
 
 		 <!--https://mvnrepository.com/artifact/org.apache.xmlrpc/xmlrpc-->
-		<dependency>
-			<groupId>org.apache.xmlrpc</groupId>
-			<artifactId>xmlrpc</artifactId>
-			<version>3.1.3</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.apache.xmlrpc</groupId>-->
+			<!--<artifactId>xmlrpc</artifactId>-->
+			<!--<version>3.1.3</version>-->
+		<!--</dependency>-->
 
 		<!-- https://mvnrepository.com/artifact/org.apache.xmlrpc/xmlrpc-client -->
 		<dependency>
